<resources>
    <string name="app_name">AppMóvil-Gustavo Orces</string>
    <string name="VerRegistrarVisita">Registrar Visita</string>
    <string name="VerInformacion">Informacion Museo</string>
    <string name="button_registrar_visita">Registrar Visita</string>
    <string name="button_consultar_caso">Buscar Caso</string>
    <string name="textNombre">Nombre / Grupo</string>
    <string name="textTelefono">Telefono</string>
    <string name="text_fecha_inicio">Fecha de la visita</string>
    <string name="text_fecha_fin">Hora Visita</string>
    <string name="text_estado">Estado</string>
    <string name="text_consultar">Ingrese el ID del caso</string>
    <string name="button_buscar">Buscar</string>
    <string name="id_abuscar">Caso ID</string>


    <string name="titlulo_pickers">Obtener fecha y hora</string>

    <string name="formato_fecha">dd/mm/yyyy</string>
    <string name="formato_hora">hh:mm</string>


    <string name="longstring">Como una importante iniciativa, los investigadores y miembros del Instituto mantienen al Museo de Historia Natural, el cual contiene representaciones y piezas paleontológicas de importancia. A través de dichas representaciones, se promueve el interés y preocupación por el cuidado del ambiente y de los ecosistemas. La Escuela Politécnica Nacional (EPN), a través del Museo se encuentra empeñada en contribuir con la educación ambiental, sensibilización y concientización de los estudiantes y público en general.</string>
    <string name="expo1">Muestran los organismos de cada era o periodo y sus cambios y adaptaciones a través del tiempo. Donde se exalcta la naturaleza, la biodiversidad de los ecosistemas."</string>
</resources>
